[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "laugh"
version = "0.0.1"
description = "Access jokes through python"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "jokes",
    "humor",
    "funny",
]
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "requests",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/thorwhalen/laugh"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]
"examples/*" = [
    "D",
]
"scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
