[metadata]
name = joke
version = 0.0.0
url = https://github.com/thorwhalen/joke
packages = 
		joke
include_package_data = True
platforms = any
description_file = README.md
description = Access jokes through python
license = mit
keywords = 
		jokes
		humor
		funny
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
include_package_data = True
zip_safe = False
packages = find:
install_requires = 
	requests

