[metadata]
name = laugh
version = 0.0.1
url = https://github.com/thorwhalen/laugh
packages = 
		haha
include_package_data = True
platforms = any
description_file = README.md
description = Access jokes through python
license = mit
keywords = 
		jokes
		humor
		funny
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
include_package_data = True
zip_safe = False
packages = find:
install_requires = 
	requests

